fix: fix addListofSubjects