@@ -1,10 +1,7 @@
 package com.marles.horarioappufps.service;
 
-import com.marles.horarioappufps.dto.response.PensumInfoDto;
-import com.marles.horarioappufps.dto.response.SubjectInfoDto;
 import com.marles.horarioappufps.model.Subject;
 import com.marles.horarioappufps.model.User;
-import com.marles.horarioappufps.repository.SubjectRepository;
 import com.marles.horarioappufps.util.RequisiteValidator;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
@@ -12,6 +9,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @Transactional
@@ -26,12 +25,12 @@ public class UserSubjectService {
         this.userService = userService;
     }
 
-    public void toggle(String uid, String code){
+    public void toggle(String uid, String code) {
         User user = userService.getUserByUid(uid);
         Subject subject = pensumService.findByCode(code);
-        if(user.containsSubject(subject)){
+        if (user.containsSubject(subject)) {
             deleteSubjectFromUser(user, subject.getCode());
-        }else{
+        } else {
             addSubjectToUser(user, subject.getCode());
         }
     }
@@ -43,8 +42,8 @@ public class UserSubjectService {
     private void addRecursively(String code, User user) {
         Subject subject = pensumService.findByCode(code);
         user.addSubject(subject);
-        for(Subject requisite : subject.getRequisites()) {
-            if(!user.containsSubject(requisite)) {
+        for (Subject requisite : subject.getRequisites()) {
+            if (!user.containsSubject(requisite)) {
                 addRecursively(requisite.getCode(), user);
             }
         }
@@ -57,21 +56,23 @@ public class UserSubjectService {
     private void deleteRecursively(String code, User user) {
         Subject subject = pensumService.findByCode(code);
         user.removeSubject(subject);
-        for(Subject unlock : pensumService.findUnlocks(subject)) {
-            if(user.containsSubject(unlock)) {
+        for (Subject unlock : pensumService.findUnlocks(subject)) {
+            if (user.containsSubject(unlock)) {
                 deleteRecursively(unlock.getCode(), user);
             }
         }
     }
 
     public void addList(String uid, List<String> codes) {
-        List<Subject> subjects = codes.stream().map(pensumService::findByCode).toList();
+        List<Subject> subjects = codes.stream().map(pensumService::findByCodeOrNull).flatMap(Stream::ofNullable).collect(Collectors.toList());
         RequisiteValidator rv = new RequisiteValidator(pensumService.getPensum());
         rv.addAll(subjects);
         User user = userService.getUserByUid(uid);
 
-        for(Subject subject : subjects) {
-            this.addSubjectToUser(user, subject.getCode());
+        for (Subject subject : subjects) {
+            for(Subject requisite : subject.getRequisites()){
+                this.addSubjectToUser(user, requisite.getCode());
+            }
         }
     }
 }
